--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           curl -L https://raw.githubusercontent.com/yubrajbhoi/termux-python/refs/heads/main/termux.patch -o termux.patch
           git apply termux.patch
+          git apply ../as13.patch
 
       - name: Build CPython for Android
         working-directory: ./cpython-3.13/Android
@@ -96,6 +97,7 @@ jobs:
           export CC=clang
           export CXX=clang++
           ls cpython-3.14
+          git apply ../as13.patch
 
       # No patch step for 3.14
 
