--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,7 @@ jobs:
           export CC=clang
           export CXX=clang++
           ls cpython-3.14
+          cd cpython-3.14
           curl -L https://raw.githubusercontent.com/plfj/py-build/refs/heads/main/as14.patch -o as14.patch
           git apply ./as14.patch
 
