--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
           ./android.py ci aarch64-linux-android
-          ls ..
+          /Users/runner/work/py-build/py-build/cpython-3.13/cross-build/aarch64-linux-android/prefix/bin/python3.13 -c "print(import('sys').version)" || echo 'Python not found'
 
       - name: Package as .deb
         run: |
@@ -118,7 +118,7 @@ jobs:
         run: |
           export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
           ./android.py ci aarch64-linux-android
-          ../cross-build/aarch64-linux-android/build/python -c "print(__import__('sys').version)" || echo 'Python not found'
+          /Users/runner/work/py-build/py-build/cpython-3.14/cross-build/aarch64-linux-android/prefix/bin/python3.14 -c "print(import('sys').version)" || echo 'Python not found'
 
       - name: Package as .deb
         run: |
@@ -183,7 +183,7 @@ jobs:
         run: |
           export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
           ./android.py ci aarch64-linux-android
-          ../cross-build/aarch64-linux-android/build/python -c "print(__import__('sys').version)" || echo 'Python not found'
+          /Users/runner/work/py-build/py-build/cpython-3.15/cross-build/aarch64-linux-android/prefix/bin/python3.15 -c "print(import('sys').version)" || echo 'Python not found'
 
       - name: Package as .deb
         run: |
