--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,6 +108,6 @@ jobs:
       - name: Upload Debian package
         uses: actions/upload-artifact@v4
         with:
-          name: pyv${{ matrix.version//./ }}
-          path: pyv${{ matrix.version//./ }}_${{ matrix.version }}_aarch64.deb
+          name: pyv${{ replace(matrix.version, '.', '') }}
+          path: pyv${{ replace(matrix.version, '.', '') }}_${{ matrix.version }}_aarch64.deb
           if-no-files-found: error
